- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    Qt Creator 4.2.0-beta1
 - 
    None
 - 
    Windows 10
 
Changes in header file not taken into account by clang code model
How to reproduce:
1) Create new widgets project
2) Add a signal handler/slot using designer
3) The handler is implemented but the code in the cpp file (form.cpp)
will never get valid. Apparently the code uses an older version of form.h.
Step 2 does is not necessarily related to the designer. Adding a method manually also triggers the issue.
After saving the header file (form.h) the issue seems to be gone.
If I close and reopen the project I see a similar issue for added methods in form.cpp until I save form.h once.
| For Gerrit Dashboard: QTCREATORBUG-17295 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 177491,3 | Clang: Fix updating dependencies | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |